Update pages, sections, and assets

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -347,7 +347,7 @@ img{
 	-ms-transition:all 300ms ease;
 	-o-transition:all 300ms ease;
 	transition:all 300ms ease;
-	background:#ffffff url(../images/icons/btn-icon.png) no-repeat;
+	/* background:#ffffff url(../images/icons/btn-icon.png) no-repeat; */
 }
 
 .btn-style-one:hover{
@@ -386,7 +386,7 @@ img{
 	-ms-transition:all 300ms ease;
 	-o-transition:all 300ms ease;
 	transition:all 300ms ease;
-	background:#de9190 url(../images/icons/btn-icon-1.png) no-repeat;
+	/* background:#de9190 url(../images/icons/btn-icon-1.png) no-repeat; */
 }
 
 .btn-style-two:hover .icon{
@@ -430,7 +430,7 @@ img{
 	-ms-transition:all 300ms ease;
 	-o-transition:all 300ms ease;
 	transition:all 300ms ease;
-	background:#de9190 url(../images/icons/btn-icon-1.png) no-repeat;
+	/* background:#de9190 url(../images/icons/btn-icon-1.png) no-repeat; */
 }
 
 .btn-style-three:hover .icon{
