--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3046,6 +3046,7 @@
 
 .banner-section-four h1 {
 	font-family: 'Poppins', sans-serif !important; /* or another normal font */
+	font-size: 4rem;
 	font-weight: 700; /* optional */
   }
   
