--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -552,7 +552,15 @@ img{
 ====================================================================
 
 ***/
-
+html, body {
+	overflow-x: hidden; /* prevent horizontal scroll */
+	max-width: 100vw;
+  }
+  
+  * {
+	box-sizing: border-box; /* ensures padding/margin doesn't increase width */
+  }
+  
 .sec-title{
 	position:relative;
 	margin-bottom:45px;
