--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -541,6 +541,52 @@
 	}
 	
 }
+/* For tablets / small desktops: 1024px – 1084px */
+@media (min-width: 1024px) and (max-width: 1084px) {
+    /* Reduce left margin/padding for first menu item */
+    .main-menu .navigation > li:first-child {
+        margin-left: 0px; /* or small value */
+        padding-left: 5px; /* adjust as needed */
+    }
+
+    /* Reduce spacing between menu items */
+    .main-menu .navigation > li {
+        margin-right: 10px; /* adjust so Gallery doesn't overlap */
+    }
+
+    /* Make sure menu z-index is above logo */
+    .main-menu .navigation {
+        position: relative;
+        z-index: 10;
+    }
+
+    /* Optional: shrink logo slightly to create more room */
+    .main-header .logo-box img {
+        max-width: 90%; /* adjust as needed */
+    }
+}
+/* Fix for 1200px+ where social icons overlap menu */
+@media (min-width: 1201px) and (max-width: 1366px) {
+    /* Adjust the main menu width or spacing */
+    .header-style-five .main-menu .navigation {
+        display: flex;
+        justify-content: flex-start; /* keep menu items left-aligned */
+        gap: 20px; /* space between menu items, adjust if needed */
+    }
+
+    /* Reduce logo width slightly to create more room */
+    .header-style-five .logo-outer img {
+        max-width: 90%; /* adjust as needed */
+    }
+
+    /* Push social icons to the right */
+    .header-style-five .social-list {
+        position: relative;
+        z-index: 10;
+        margin-left: auto; /* pushes them to far right */
+    }
+}
+
 
 /* Medium screens */
 @media (max-width: 1200px) {
@@ -572,10 +618,529 @@
     }
 
     .header-style-five .main-menu .navigation {
-        margin-left: 0;
+        display: none;
     }
 }
 
+
+
+@media (min-width: 801px) {
+    .mobile-toggle {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px){
+	
+	.header-upper .logo-outer {
+		position:relative;
+		left:0px;
+		top:0px;
+		right:0px;
+		bottom:0px;
+		width:100%;
+		margin:0px;
+	}
+	
+	.sidebar-page-container .comments-area .comment-box .author-thumb{
+		position:relative;
+	}
+	
+	.main-header .sticky-header .outer-box{
+		display:block;
+		right: 15px;
+		left: auto;
+		top:0px;
+	}
+	
+	.main-menu{
+		width:100%;
+		display:none;
+	}
+	
+	.main-menu .navbar-collapse {
+	   max-height:300px;
+	   max-width:none;
+		overflow:auto;
+		float:none !important;
+		width:100% !important;
+		padding:0px 0px 0px;
+		border:none;
+		margin:0px 0px 15px;
+		-ms-border-radius:0px;
+		-moz-border-radius:0px;
+		-webkit-border-radius:0px;
+		-o-border-radius:0px;
+		border-radius:0px;
+		box-shadow:none;
+   }
+   
+	.main-menu .navbar-collapse.in,
+	.main-menu .collapsing{
+		padding:0px 0px 0px;
+		border:none;
+		margin:0px 0px 15px;
+		-ms-border-radius:0px;
+		-moz-border-radius:0px;
+		-webkit-border-radius:0px;
+		-o-border-radius:0px;
+		border-radius:0px;
+		box-shadow:none;	
+	}
+	
+	.main-menu .navbar-header{
+		position:relative;
+		float:none;
+		display:block;
+		text-align:right;
+		width:100%;
+		padding:15px 0px;
+		right:0px;
+		z-index:12;
+	}
+	
+	.main-menu .navbar-header .navbar-toggle{
+		display:inline-block;
+		z-index:12;
+		border:1px solid #cc8809;
+		float:none;
+		margin:0px 0px 0px 0px;
+		border-radius:0px;
+		background:#cc8809;
+	}
+	
+	.main-menu .navbar-header .navbar-toggle .icon-bar{
+		background:#ffffff;	
+	}
+	
+	.main-menu .navbar-collapse > .navigation{
+		float:none !important;
+		margin:0px !important;
+		width:100% !important;
+		background:#2c2c2c;
+		border:1px solid #ffffff;
+		border-top:none;
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li{
+		margin:0px !important;
+		float:none !important;
+		padding:0px !important;
+		width:100%;
+	}
+	
+	.main-menu .navigation > li > a,
+	.main-menu .navigation > li > ul:before{
+		border:none;	
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li > a{
+		padding:10px 10px !important;
+		border:none !important;
+	}
+	
+	.main-menu .navigation li.dropdown > a:after,
+	.main-menu .navigation > li.dropdown > a:before,
+	.main-menu .navigation > li > ul > li > a::before,
+	.main-menu .navigation > li > ul > li > ul > li > a::before{
+		color:#ffffff !important;
+		right:15px;
+		font-size:16px;
+		display:none !important;
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li > ul,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > ul{
+		position:relative;
+		border:none;
+		float:none;
+		visibility:visible;
+		opacity:1;
+		display:none;
+		margin:0px;
+		left:auto !important;
+		right:auto !important;
+		top:auto !important;
+		padding:0px;
+		outline:none;
+		width:100%;
+		background:#2c2c2c;
+		-webkit-border-radius:0px;
+		-ms-border-radius:0px;
+		-o-border-radius:0px;
+		-moz-border-radius:0px;
+		border-radius:0px;
+		transition:none !important;
+		-webkit-transition:none !important;
+		-ms-transition:none !important;
+		-o-transition:none !important;
+		-moz-transition:none !important;
+	}
+		
+	.main-menu .navbar-collapse > .navigation > li > ul,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > ul{
+		border-top:1px solid rgba(255,255,255,1) !important;	
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li,
+	.main-menu .navbar-collapse > .navigation > li > ul > li,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > ul > li{
+		border-top:1px solid rgba(255,255,255,1) !important;
+		border-bottom:none;
+		opacity:1 !important;
+		top:0px !important;
+		left:0px !important;
+		visibility:visible !important;
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li:first-child{
+		border:none;	
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li > a,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > a,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > ul > li > a{
+		padding:10px 10px !important;
+		line-height:22px;
+		color:#ffffff;
+		background:#2c2c2c;
+		text-align:left;
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li > a:hover,
+	.main-menu .navbar-collapse > .navigation > li > a:active,
+	.main-menu .navbar-collapse > .navigation > li > a:focus{
+		background:#cc8809;
+	}
+	
+	.main-menu .navbar-collapse > .navigation > li:hover > a,
+	.main-menu .navbar-collapse > .navigation > li > ul > li:hover > a,
+	.main-menu .navbar-collapse > .navigation > li > ul > li > ul > li:hover > a,
+	.main-menu .navbar-collapse > .navigation > li.current > a,
+
+	.main-menu .navbar-collapse > .navigation > li.current-menu-item > a{
+		background:#2c2c2c;
+		color:#ffffff !important;
+	}
+	
+	.main-menu .navbar-collapse > .navigation li.dropdown .dropdown-btn{
+		display:block;
+	}
+	
+	.sec-title .text br,
+	.main-slider .owl-nav,
+	.milkshake-section .icon-layer-three,
+	.main-menu .navbar-collapse > .navigation li.dropdown:after,
+	.main-menu .navigation > li > ul:before{
+		display:none !important;	
+	}
+	
+	.main-header .btn-outer{
+		left:0px;
+		top:0px;
+		right:auto;
+		margin-top:15px;
+		text-align:left;
+		z-index:12;
+	}
+	
+	.main-header .main-box .logo-box{
+		float:none;
+		text-align:center;
+		padding-bottom:10px;
+	}
+	
+	.sidebar-page-container .comments-area .comment-box.reply-comment{
+		margin-left:0px;
+	}
+	
+	.main-header .header-lower .outer-box{
+		position:absolute;
+		z-index:12;
+		display:block;
+	}
+	
+	.main-menu .navbar-header .navbar-toggler{
+		display: inline-block;
+		z-index: 12;
+		width: 50px;
+		height: 40px;
+		float: none;
+		padding: 0px;
+		text-align: center;
+		border-radius: 0px;
+		background: none;
+		border: 1px solid #ffffff;
+	}
+	
+	.main-menu .navbar-header .navbar-toggler .icon-bar{
+		position: relative;
+		background: #ffffff;
+		height: 2px;
+		width: 26px;
+		display: block;
+		margin:0 auto;
+		margin:5px 11px;
+	}
+	
+	.main-header .nav-outer{
+		width:100%;
+	}
+	
+	.main-slider h3{
+		font-size:20px;
+	}
+	
+	.main-slider h3 span{
+		font-size:30px;
+	}
+	
+	.main-slider .text{
+		font-size:16px;
+	}
+	
+	.recipe-section .icon-layer-two,
+	.main-menu .navigation > li:before,
+	.main-header .outer-box .buttons-box,
+	.main-slider .text br{
+		display:none;
+	}
+	
+	.main-slider .slide{
+		padding:120px 0px;
+	}
+	
+	.main-header .outer-box .option-box > li{
+		margin-left:0px;
+		margin-right: 20px;
+	}
+	
+	.main-header .header-lower .search-box-outer .dropdown-menu{
+		left:0px !important;
+		top:40px !important;
+	}
+	
+	.main-header .outer-box .option-box .cart-box .cart-panel{
+		left:0px !important;
+		right:auto;
+	}
+	
+	.nav-outer .mobile-nav-toggler{
+		display: block;
+		margin: 0;
+		padding: 8px 0;
+		margin-left: 20px;
+	}
+	
+	#navbarSupportedContent{
+		display:block;
+	}
+	
+	.mCSB_inside > .mCSB_container{
+		margin-right:0px;
+	}
+	
+	.main-header .outer-box{
+		position:absolute;
+		left:0px;
+		bottom:0px;
+		margin-left:0px;
+		padding:22px 0px 18px;
+	}
+	
+	h1{
+		font-size:64px;
+	}
+	
+	.page-title h2,
+	h2{
+		font-size:30px;
+	}
+	
+	.sidebar-page-container .comments-area .comment,
+	.shop-page .prod-tabs .reviews-container .review-box{
+		padding-left:0px;
+	}
+	
+	.authors-box .thumb{
+		position:relative;
+		margin-bottom:30px;
+	}
+	
+	.authors-box .author-inner{
+		padding-right:0px;
+	}
+	
+	.error-section .text{
+		font-size:18px;
+	}
+	
+	.sticky-header .logo{
+		width:auto;
+		text-align:left;
+	}
+	
+	.main-header .header-upper .logo-box{
+		padding:0px;
+	}
+	
+	.deal-section .content-box{
+		width:100%;
+		height:auto;
+		border-radius:0px;
+		padding:0px 0px 0px;
+	}
+	
+	.deal-section .content-box .box-inner{
+		padding:100px 20px 120px;
+	}
+	
+	.recipe-block{
+		margin-bottom:30px;
+	}
+	
+	.recipe-block .inner-box{
+		padding:0px;
+		text-align:center;
+	}
+	
+	.recipe-block .inner-box .icon{
+		position:relative;
+		margin:0 auto;
+		margin-bottom:20px;
+	}
+	
+	.recipe-block.style-two .inner-box{
+		padding-left:0px;
+		text-align:center;
+	}
+	
+	.testimonial-block .inner-box .text br,
+	.recipe-section .circle-layer{
+		display:none;
+	}
+	
+	.banner-section .owl-dots{
+		position:relative;
+		margin-top:0px;
+		bottom:0px;
+		padding-top:30px;
+	}
+	
+	.banner-section .owl-dots .owl-dot span{
+		color:#111111;
+		opacity:1;
+	}
+	
+	.banner-section .owl-dots .owl-dot::after{
+		color:#111111;
+		opacity:1;
+	}
+	
+	.banner-section .owl-dots .owl-dot:hover span,
+	.banner-section .owl-dots .owl-dot.active span{
+		color:#111111;
+	}
+	
+	.header-style-two .header-upper .logo-box{
+		padding:15px 0px;
+		width:auto;
+	}
+	
+	.header-style-two .header-upper .nav-outer{
+		margin-top:-78px;
+	}
+	
+	.header-style-three .header-upper .logo-box{
+		padding:15px 0px;
+	}
+	
+	.header-style-three .header-lower .outer-box .social-box li{
+		margin-left:0px;
+		margin-right:20px;
+	}
+	
+	.header-style-three .nav-outer .mobile-nav-toggler,
+	.header-style-four .nav-outer .mobile-nav-toggler{
+		color:#111111;
+	}
+	
+	.newsletter-section .inner-container{
+		margin-top:90px;
+		border-radius:0px;
+	}
+	
+	.newsletter-section .title-column .inner-column{
+		padding-left:0px;
+		text-align:center;
+	}
+	
+	.newsletter-section .title-column .inner-column .send-icon{
+		position:relative;
+		margin-bottom:25px;
+	}
+	
+	.news-block-two .inner-box{
+		padding-left:0px;
+		min-height:auto;
+	}
+	
+	.news-block-two .inner-box .image{
+		position:relative;
+		width:100%;
+	}
+	
+	.news-block-two .inner-box .content{
+		padding-top:25px;
+	}
+	
+	.footer-style-three .footer-widget{
+		text-align:center;
+	}
+	
+	.footer-style-three .footer-widget h6::before{
+		left:50%;
+		margin-left:-22px;
+	}
+	
+	.page-title{
+		padding:100px 0px 150px;
+		color: black;
+	}
+	
+	.staff-block{
+		margin-bottom:30px;
+	}
+	
+	.menus-section.style-two{
+		padding-top:80px;
+	}
+	
+	.news-block-four .inner-box .image .content{
+		padding-top:50px;
+	}
+	
+	.header-style-five .nav-outer .mobile-nav-toggler{
+		color:#111111;
+	}
+	
+	.header-style-five .header-upper .outer-box .nav-btn{
+		margin-left:0px;
+	}
+	
+	.main-header .header-upper .logo-box{
+		padding-top:20px;
+	}
+	
+	.banner-section-four .slide{
+		padding:120px 0px 150px;
+	}
+	
+	.header-style-five .header-upper .outer-box{
+		right:auto;
+	}
+	
+}
 
 @media only screen and (max-width: 767px){
 	
